--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@
 }
 
 .notification-container{
-    width: 200px;
+    min-width: 200px;
+    width:100%;
     position: fixed;
     margin:10px;
     display: flex;
