--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     overflow: hidden;
     color:black;
     border-radius: 0.25em;
+    border:1px solid rgb(233, 236, 239);
+    box-shadow: rgb(0 0 0 / 5%) 0px 1px 3px, rgb(0 0 0 / 5%) 0px 28px 23px -7px, rgb(0 0 0 / 4%) 0px 12px 12px -7px;
 }
 /* .notification:hover{
     box-shadow: 0px 4px 10px 1px rgba(87,87,87,0.24) ;
@@ -30,7 +32,8 @@
 }
 
 .notification-container{
-    width: 200px;
+    width: 100%;
+    min-width: 200px;
     position: fixed;
     margin:10px;
     display: flex;
