--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@
 }
 
 .notification-container{
-    min-width: 200px;
-    width:fit-content;
+    width: 250px;
     position: fixed;
     margin:10px;
     display: flex;
